--- a/WordFrequency/WordFrequencyCell.xib
+++ b/WordFrequency/WordFrequencyCell.xib
@@ -30,8 +30,8 @@
                         </attributedString>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DXO-90-U0r">
-                        <rect key="frame" x="261" y="12" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DXO-90-U0r">
+                        <rect key="frame" x="261" y="11.5" width="42" height="20"/>
                         <attributedString key="attributedText">
                             <fragment content="Label">
                                 <attributes>
